[project]
name = "pyblhost"
version = "1.7.1"
description = "Python implementation of blhost used to communicate with the NXP MCUBOOT/KBOOT bootloader"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Kristian Sloth Lauszus", email = "lauszus@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["blhost", "kboot", "bootloader", "embedded", "CAN", "serial"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
    "python-can>=4.3.0",
    "pyserial",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist[psutil]>=3.8.0",
]

[project.urls]
Repository = "https://github.com/Lauszus/pyblhost"
Issues = "https://github.com/Lauszus/pyblhost/issues"

[project.scripts]
pyblhost = "pyblhost.pyblhost:cli"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "E", # pycodestyle (error)
    "W", # pycodestyle (warning)
    "F", # pyflakes
    "FA", # flake8-future-annotations
    "B", # bugbear
    "B9",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "YTT",  # flake8-2020
    "FAST", # FastAPI
    "PLR1722",  # Use sys.exit() instead of exit()
    "DTZ003",  # Make sure to use timezone-aware UTC datetimes
    "DTZ004",
    "UP017", # Use `datetime.UTC` alias
]
ignore = [
    "ANN401", # Allow use of `Any` in type annotations
    "PYI041", # Do not convert `int | float` to `float`
]
future-annotations = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "*/__init__.py",
    "*/__main__.py",
]
